--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
+    "@coinbase/onchainkit": "^0.35.7",
     "@tanstack/react-query": "^5",
     "next": "14.2.15",
     "react": "^18",
