--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.35.8",
+    "@noble/hashes": "^1.6.1",
     "@tanstack/react-query": "^5",
+    "autoprefixer": "^10.4.20",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -23,8 +25,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "5.7.2"
   }
 }
